<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">RHIT HMU</string>
    <string name="action_settings">Settings</string>
    <string name="action_import_classes">Import Classes</string>
    <string name="startDateButtonFirstHalf">"Start Day: \n"</string>
    <string name="startTimeFirstHalf">"Start Time: \n"</string>
    <string name="endTimeFirstHalf">"End Time: \n"</string>
    <string name="nameTextViewLabel">Name</string>
    <string name="nameEditTextHint">Input Event Name</string>
    <string name="locationTextViewLabel">Location</string>
    <string name="locationEditTextHint">Input Event Location</string>
    <string name="inviteesTextViewLabel">Invitees</string>
    <string name="inviteesEditTextHint">Input event invitees</string>
    <string name="descriptionTextViewLabel">Description</string>
    <string name="descriptionEditTextHint">Add a description</string>
    <string name="recurrenceTextViewLabel">Recurring</string>
    <string name="delete">Delete</string>
    <string name="endDateButtonFirstHalf">End Day: \n\t</string>
    <string name="match_schedule_button_text">Match Schedule</string>
    <string name="today_button_text">Today</string>
    <string name="one_day_button_text">One Day</string>
    <string name="three_day_button_text">Three Day</string>
    <string name="week_button_text">Week</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="invalid_password">Password is too short</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="login_error">Login Error!</string>
    <string name="prompt_password">Password</string>
    <string name="action_logout">Log Out</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="login_with_rosefire">Login with Rosefire</string>
    <string name="no">No</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="insecure_connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Recurring options-->
    <!-- according to Chris spinners are evil. I really hope hes wrong -->
    <string-array name="YesNo">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string name="how_often">How often?</string>
    <string-array name="Frequency">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="until">Until: </string>
    <string name="commitScheduleButton">Add Selected Events</string>
    <string name="match_events_button_text">Match Events</string>
</resources>
