<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/matchSyncSchedule"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_schedule_button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/todayButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/today_button_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/oneDayButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/one_day_button_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/threeDayButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/three_day_button_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/sevenDayButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/week_button_text"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.alamkanak.weekview.WeekView
                android:id="@+id/weekView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:columnGap="8dp"
                app:dayBackgroundColor="#05000000"
                app:eventTextColor="@android:color/white"
                app:headerColumnBackground="#ffffffff"
                app:headerColumnPadding="8dp"
                app:headerColumnTextColor="#8f000000"
                app:headerRowBackgroundColor="#ffefefef"
                app:headerRowPadding="12dp"
                app:hourHeight="60dp"
                app:noOfVisibleDays="3"
                android:textSize="12sp"
                app:todayBackgroundColor="#1848adff" />
        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add" />


</android.support.design.widget.CoordinatorLayout>